package usantatecla.mastermind.controllers;

public interface AceptorController {

     void accept(VisitorController visitorController);
}
